updates the order routes
